--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,6 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "node-sass": "^3.3.3",
     "react-hot-loader": "^1.3.0",
-    "redux-logger": "^2.0.1",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
@@ -17,14 +16,8 @@
   },
   "dependencies": {
     "@applaudience/react-carousel": "^0.1.1",
-    "immutable": "^3.7.5",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
     "react": "0.14.0-rc1",
     "react-css-modules": "^3.2.3",
-    "react-dom": "^0.14.0-rc1",
-    "react-redux": "^3.0.1",
-    "redux": "^2.0.0",
-    "redux-immutable": "^1.3.7"
+    "react-dom": "^0.14.0-rc1"
   }
 }
