--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "gulp-sourcemaps": "^1.6.0",
         "image-webpack-loader": "^1.6.1",
         "imagemin": "^3.2.0",
+        "merge-stream": "^1.0.0",
         "mocha": "^2.3.3",
         "mocha-lcov-reporter": "^1.0.0",
         "mockery": "^1.4.0",
@@ -58,7 +59,6 @@
         "sass-loader": "^2.0.1",
         "sinon": "^1.17.1",
         "sinon-chai": "^2.8.0",
-        "style-loader": "^0.12.4",
-        "merge-stream": "^1.0.0"
+        "style-loader": "^0.12.4"
     }
 }
