Add dev mode for running example
- Add component as webpack alias in project only if NODE_ENV=DEV is set
  in env
- Use absolute path in all `path.resolve`s

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/.bin/webpack-dev-server",
+    "dev": "NODE_ENV='DEV' npm start"
   },
   "devDependencies": {
     "babel": "^5.8.23",
