--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node ./node_modules/.bin/webpack-dev-server",
+    "start": "node ./node_modules/.bin/babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "dev": "NODE_ENV='DEV' npm start"
   },
   "devDependencies": {
