Clean up the code. Add jsdoc annotations
- ES6 in webpack was a bad idea. It works for webpack-dev-server but not
  for `webpack -p` for some reason
- Restructure the code to make it very simple and easy to
  undertsand/test
- Clean up the example. Remove all the controls. I'll add them later if
  the need be. Right now I am hungry and I don't wanna go for dinner
  before finishing this.

What's left:
------------------------------------------------------------------------------------------
- Tests for new code
- Documentation. I know I was recommended to do
  README-driven-development, but well, I'll try next time

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node ./node_modules/.bin/babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "node ./node_modules/.bin/webpack-dev-server",
+    "build": "NODE_ENV='DEV' node ./node_modules/.bin/webpack -p",
     "dev": "NODE_ENV='DEV' npm start"
   },
   "devDependencies": {
