--- a/example/package.json
+++ b/example/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "node ./node_modules/.bin/webpack-dev-server",
-    "build": "NODE_ENV='DEV' node ./node_modules/.bin/webpack -p",
-    "dev": "NODE_ENV='DEV' npm start"
+    "dev": "NODE_ENV='development' ./node_modules/.bin/webpack-dev-server --config=./webpack.dev.config.js"
   },
   "devDependencies": {
     "babel": "^5.8.23",
