Fix #5 and Fix #6

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^5.3.2",
     "chai": "^3.3.0",
     "css-loader": "^0.19.0",
+    "del": "^2.0.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
@@ -42,13 +43,12 @@
     "gulp-sourcemaps": "^1.6.0",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
-    "merge-stream": "^1.0.0",
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
     "mockery": "^1.4.0",
     "node-sass": "^3.3.3",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
     "sass": "^0.5.0",
     "sass-loader": "^3.0.0",
     "sinon": "^1.17.1",
