--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,3 +1,10 @@
 {
-    "stage": 0
+    "presets": [
+        "stage-0",
+        "es2015",
+        "react"
+    ],
+    "plugins": [
+        "transform-class-properties"
+    ]
 }
