--- a/example/package.json
+++ b/example/package.json
@@ -1,24 +1,25 @@
 {
   "scripts": {
-    "start": "node ./node_modules/.bin/webpack-dev-server",
-    "dev": "NODE_ENV='development' ./node_modules/.bin/webpack-dev-server --config=./webpack.dev.config.js"
+    "start": "node ./node_modules/.bin/webpack-dev-server"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.19.0",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "node-sass": "^3.3.3",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.0.0",
-    "style-loader": "^0.12.4",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-class-properties": "^6.2.2",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.8",
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "@applaudience/react-carousel": "^0.2.4",
-    "react": "0.14.0-rc1",
-    "react-css-modules": "^3.5.2",
-    "react-dom": "^0.14.0-rc1"
+    "react": "^0.14.3",
+    "react-css-modules": "^3.6.1",
+    "react-dom": "^0.14.3"
   }
 }
