--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^3.10.1"
   },
   "devDependencies": {
+    "babel-plugin-lodash": "^1.0.2",
     "chai": "^3.4.1",
     "mockery": "^1.4.0",
     "pragmatist": "^1.4.4",
