Rename to react-carousel
- Version bump to 3.0.0
- Update docs
- Fix few bugs
- Update example

--- a/example/package.json
+++ b/example/package.json
@@ -4,22 +4,22 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-class-properties": "^6.2.2",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.1",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.8",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "@applaudience/react-carousel": "^0.2.4",
     "react": "^0.14.3",
-    "react-css-modules": "^3.6.1",
+    "react-carousel": "^3.0.0",
+    "react-css-modules": "^3.6.3",
     "react-dom": "^0.14.3"
   }
 }
