--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@applaudience/react-carousel",
-  "version": "0.2.6",
+  "name": "react-carousel",
+  "version": "3.0.0",
   "description": "Carousel react component",
   "main": "dist/index.js",
   "scripts": {
-    "pragmatist": "node ./node_modules/.bin/pragmatist",
+    "pragmatist": "node ./node_modules/.bin/pragmatist --browser",
     "lint": "npm run pragmatist lint",
     "test": "npm run pragmatist test",
     "build": "npm run pragmatist build",
     "watch": "npm run pragmatist watch",
+    "watch-build": "npm run pragmatist watch-build",
     "preversion": "npm run lint && npm run test && npm run build"
   },
   "repository": {
@@ -16,7 +17,7 @@
     "url": "git@github.com:applaudience/react-carousel.git"
   },
   "engines": {
-    "node": "~5.0.0"
+    "node": "~5.2.0"
   },
   "dependencies": {
     "lodash": "^3.10.1"
@@ -25,7 +26,7 @@
     "babel-plugin-lodash": "^1.0.2",
     "chai": "^3.4.1",
     "mockery": "^1.4.0",
-    "pragmatist": "^1.4.4",
+    "pragmatist": "^2.3.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
   }
