--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-carousel",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "React carousel component.",
   "main": "./dist/index.js",
   "license": "BSD-3-Clause",
   "scripts": {
-    "pragmatist": "node ./node_modules/.bin/pragmatist --browser",
+    "pragmatist": "node ./node_modules/.bin/pragmatist --browser --types",
     "lint": "npm run pragmatist lint",
     "test": "npm run pragmatist test",
     "build": "npm run pragmatist build",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "mockery": "^1.4.0",
-    "pragmatist": "^2.3.2",
+    "pragmatist": "^2.3.5",
     "react": "^0.14.3",
     "react-css-modules": "^3.6.3",
     "react-dom": "^0.14.3",
