--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "react-carousel",
-  "version": "3.1.3",
+  "version": "3.1.5",
   "description": "React carousel component.",
-  "main": "./dist/index.js",
+  "main": "./src/index.js",
   "license": "BSD-3-Clause",
   "scripts": {
-    "pragmatist": "node ./node_modules/.bin/pragmatist --browser --types",
+    "pragmatist": "node ./node_modules/.bin/pragmatist --es5 --type-assertions",
     "lint": "npm run pragmatist lint",
     "test": "npm run pragmatist test",
-    "build": "npm run pragmatist build",
-    "watch": "npm run pragmatist watch",
-    "watch-build": "npm run pragmatist watch-build",
     "preversion": "npm run lint && npm run test && npm run build"
   },
   "repository": {
@@ -21,16 +18,16 @@
     "node": "~5.2.0"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
+    "lodash": "^4.1.0"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "chai": "^3.5.0",
     "mockery": "^1.4.0",
-    "pragmatist": "^2.3.5",
-    "react": "^0.14.3",
-    "react-css-modules": "^3.6.3",
-    "react-dom": "^0.14.3",
-    "sinon": "^1.17.2",
+    "pragmatist": "^3.0.3",
+    "react": "^0.14.7",
+    "react-css-modules": "^3.7.0",
+    "react-dom": "^0.14.7",
+    "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   }
 }
