--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
         "stage-0",
         "react"
     ],
+    "plugins": [
+        "lodash"
+    ],
     "env": {
         "development": {
             "plugins": [
