--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-carousel",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "React carousel component.",
   "main": "./src/index.js",
   "license": "BSD-3-Clause",
@@ -18,14 +18,15 @@
     "node": "~5.2.0"
   },
   "dependencies": {
-    "lodash": "^4.1.0"
+    "lodash": "^4.2.1"
   },
   "devDependencies": {
+    "babel-plugin-lodash": "^2.0.1",
     "chai": "^3.5.0",
     "mockery": "^1.4.0",
     "pragmatist": "^3.0.3",
     "react": "^0.14.7",
-    "react-css-modules": "^3.7.0",
+    "react-css-modules": "^3.7.4",
     "react-dom": "^0.14.7",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
