--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
         "react"
     ],
     "plugins": [
-        "lodash"
+        "lodash-modularize"
     ],
     "env": {
         "development": {
