--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-carousel",
-  "version": "3.1.6",
+  "version": "3.1.7",
   "description": "React carousel component.",
   "main": "./src/index.js",
   "license": "BSD-3-Clause",
@@ -21,7 +21,7 @@
     "lodash": "^4.2.1"
   },
   "devDependencies": {
-    "babel-plugin-lodash": "^2.0.1",
+    "babel-plugin-lodash-modularize": "^0.3.2",
     "chai": "^3.5.0",
     "mockery": "^1.4.0",
     "pragmatist": "^3.0.3",
