--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-carousel",
-  "version": "3.1.8",
+  "version": "3.2.0",
   "description": "React carousel component.",
   "main": "./src/index.js",
   "license": "BSD-3-Clause",
   "scripts": {
-    "pragmatist": "node ./node_modules/.bin/pragmatist --es5 --type-assertions",
-    "lint": "npm run pragmatist lint",
-    "test": "npm run pragmatist test",
-    "preversion": "npm run lint && npm run test && npm run build"
+    "lint": "eslint ./tests ./src",
+    "test": "echo \"Error: Fix tests script\""
   },
   "repository": {
     "type": "git",
@@ -18,18 +16,18 @@
     "node": "~5.2.0"
   },
   "dependencies": {
-    "lodash": "^4.2.1",
     "babel-plugin-lodash-modularize": "^0.3.2",
-    "babel-plugin-typecheck": "^3.6.1"
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mockery": "^1.4.0",
-    "pragmatist": "^3.0.3",
-    "react": "^0.14.7",
-    "react-css-modules": "^3.7.4",
-    "react-dom": "^0.14.7",
-    "sinon": "^1.17.3",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0"
   }
 }
