--- a/example/package.json
+++ b/example/package.json
@@ -3,23 +3,19 @@
     "start": "node ./node_modules/.bin/webpack-dev-server"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.2",
-    "babel-plugin-transform-class-properties": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.13",
+    "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react": "^0.14.7",
-    "react-carousel": "^3.1.5",
-    "react-css-modules": "^3.7.4",
-    "react-dom": "^0.14.7"
+    "lodash": "^4.15.0",
+    "react": "^15.3.0",
+    "react-carousel": "^3.1.8",
+    "react-dom": "^15.3.0"
   }
 }
