--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: node_js
 node_js:
-    - '5.0'
-    - '4.0'
+  - node
+  - 4
 notifications:
-    email: false
+  email: false
 sudo: false
+scripts:
+  - npm run lint
+  - npm run test
+  - npm run build
+after_success:
+  - npm run build && semantic-release pre && npm publish && semantic-release post
