--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "react-carousel",
-  "version": "3.3.0",
-  "description": "React carousel component.",
-  "main": "./src/index.js",
-  "license": "BSD-3-Clause",
-  "scripts": {
-    "lint": "eslint ./tests ./src",
-    "test": "echo \"Error: Fix tests script\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:gajus/react-carousel.git"
-  },
-  "engines": {
-    "node": "~5.2.0"
-  },
-  "dependencies": {
-    "babel-plugin-lodash-modularize": "^0.3.2",
-    "babel-plugin-typecheck": "^3.9.0",
+  "description": "React carousel.",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "lodash": "^4.17.4"
-  },
-  "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-canonical": "^8.1.1",
+    "mocha": "^3.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0"
-  }
+  },
+  "engines": {
+    "node": ">4"
+  },
+  "keywords": [
+    "react",
+    "carousel"
+  ],
+  "license": "BSD-3-Clause",
+  "main": "./dist/index.js",
+  "name": "react-carousel",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gajus/react-carousel.git"
+  },
+  "scripts": {
+    "build": "rm -fr ./dist && NODE_ENV=production babel ./src --source-maps --copy-files --out-dir ./dist",
+    "lint": "eslint ./test ./src ./demo/src",
+    "test": "mocha --compilers js:babel-core/register"
+  },
+  "version": "3.3.0"
 }
