--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ scripts:
   - npm run test
   - npm run build
 after_success:
-  - npm run build && semantic-release pre && npm publish && semantic-release post
+  - npm run build
+  - semantic-release pre
+  - npm publish
+  - semantic-release post
