--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^3.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "semantic-release": "^6.3.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0"
   },
