--- a/demo/package.json
+++ b/demo/package.json
@@ -3,6 +3,7 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
